--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -102,21 +102,47 @@ body {
     position: relative;
     width: 60%;
     border-radius: 30px;
-    background-color: #0cfad6;
-}
-.clients img:first-child{
-    position: absolute;
-    padding-left: 40px;
-    padding-top: 15px;
-    float: left;
+    background-color: ghostwhite;
+    border: 4px solid black;
+    margin-bottom: 20px;
 }
 
-.status{
-    background-color:gray;
+.clients img:first-child {
+    position: absolute;
+    padding-left: 60px;
+    padding-top: 15px;
+    float: left;
+    z-index: 1002;
+}
+
+.status {
+    background-color: gray;
     color: white;
+    font-size: 24px;
     position: relative;
     border-radius: 15px;
     margin-left: 650px;
     padding-left: 20px;
+    margin-right: 20px;
 
 }
+dialog {
+    display: none;
+
+}
+
+dialog[open="open"] {
+    display: block;
+    width: 20em;
+    background-color: white;
+    border: 4px solid black;
+    position: fixed;
+    top: 30%;
+    right: 30%;
+    left: 30%;
+    margin: auto;
+    padding: 1em;
+    z-index: 1002;
+}
+
+
