--- a/files/css/Login.css
+++ b/files/css/Login.css
@@ -70,3 +70,22 @@ body {
     color: black;
     font-size: 16px;
 }
+meter {
+    /* Ändert die Normale Erscheinung */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    margin: 0 auto 1em;
+    width: 100%;
+    height: 0.5em;
+
+    /* Für Firefox*/
+    background: none;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+meter::-webkit-meter-bar {
+    background: none;
+    background-color: rgba(0, 0, 0, 0.1);
+}
