added preheader text and emailverify.html

--- a/libs/templates/emailFreigeben.html
+++ b/libs/templates/emailFreigeben.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">{project-name} freigegeben</span>
 <center>
 <img alt="tick" height="200" src="http://localhost/design-revision/files/img/demo.png" width="200">
     <h1 style="font-size:48px">Design Revision</h1>
