--- a/libs/templates/emailNeueAenderungen.html
+++ b/libs/templates/emailNeueAenderungen.html
@@ -6,6 +6,9 @@
     <title>Neue Änderungen gespeichert</title>
 </head>
 <body>
+
+<span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">{name} hat neue &Auml;nderungen gespeichert </span>
+
 <center>
     <img alt="tick" height="200px" width="200px" src="http://localhost/design-revision/files/img/demo.png">
     <h1 style="font-size:48px">Design Revision</h1>
