--- a/libs/templates/resetPassword.html
+++ b/libs/templates/resetPassword.html
@@ -5,6 +5,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 </head>
 <body>
+
+<span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Reset Password</span>
+
 <center>
     <img alt="logo" height="200px" width="200px"
          src="http://localhost/design-revision/files/img/logo.png">
