improvements and cleanup for the presentation

--- a/libs/templates/emailverify.html
+++ b/libs/templates/emailverify.html
@@ -6,13 +6,12 @@
     <title>Neue Änderungen gespeichert</title>
 </head>
 <body>
-
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Wilkommen bei Design Revision</span>
-
 <center>
-    <img alt="tick" height="200px" width="200px" src="http://localhost/design-revision/files/img/demo.png">
+    <img alt="logo" height="200px" width="200px" src="http://localhost/design-revision/files/img/logo.png">
     <h1 style="font-size:48px">Design Revision</h1>
-    <p style="font-size:24px">Wilkommen bei Design Revison {name} Drücken sie auf den Link um sich zu verifizieren.<br>
+    <p style="font-size:24px">Wilkommen bei Design Revison {name}<br>Bitte klicken Sieie auf den Link um Ihre E-Mail zu
+        verifizieren.<br>
     </p>
     <a href="{link}"
        style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none; cursor: pointer">Verifizieren</a>
