--- a/libs/templates/resetPassword.html
+++ b/libs/templates/resetPassword.html
@@ -5,9 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 </head>
 <body>
-
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Reset Password</span>
-
 <center>
     <img alt="logo" height="200px" width="200px"
          src="http://localhost/design-revision/files/img/logo.png">
@@ -15,7 +13,8 @@
     <p style="font-size:24px"><br>
     </p>
     <a href="{link}"
-       style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none; cursor: pointer">Open reset Page</a>
+       style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none; cursor: pointer">Open
+        reset Page</a>
 </center>
 </body>
 </html>
