--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -3,14 +3,13 @@ body {
     color: #000000;
     font-family: Arial, sans-serif;
 
-
 }
 
 .form {
     border-radius: 30px;
     position: fixed;
     box-sizing: border-box;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left: 80%;
     background: #0cfad6;
     width: 20%;
@@ -71,6 +70,7 @@ body {
     background-color: rgba(128, 128, 128, 0.2);
     box-sizing: border-box;
     width: 50%;
+    height:15%;
 }
 
 .topform {
@@ -81,16 +81,29 @@ body {
     background-color: rgba(128, 128, 128, 0.2);
     box-sizing: border-box;
     width: 50%;
-    height: 104px;
+    height: 15%;
 }
-.space{
+.topform a{
+    background-color:#333;
+    color: #fff;
+    text-decoration:none;
+    font-size: 18px;
+    padding: 12px 12px;
+    margin: 30px 10px 10px 20px;
+    cursor: pointer;
+    border: none;
+    float: right;
+}
+
+.space {
     margin-top: 8.5%;
     position: relative;
 }
+
 .topform input[type="text"] {
     float: right;
     margin-top: 25px;
-    margin-right: 30px;
+    margin-right: 10px;
     color: black;
     text-align: center;
     border: none;
@@ -111,25 +124,36 @@ body {
     margin-bottom: 20px;
 }
 
-.clients img:first-child {
-    position: absolute;
-    padding-left: 60px;
-    padding-top: 15px;
+.clients img:nth-child(2){
+    position: relative;
+    padding: 20px;
+    float: right;
+    z-index: 1002;
+}
+.clients img:nth-child(1){
+    position: relative;
+    padding-left: 40px;
+    padding-top: 40px;
     float: left;
     z-index: 1002;
 }
-
+.clients p{
+   padding-left: 40%;
+    margin: 15px;
+}
 .status {
     background-color: gray;
     color: white;
     font-size: 24px;
     position: relative;
     border-radius: 15px;
-    margin-left: 650px;
-    padding-left: 20px;
+    margin-left:    70%;
     margin-right: 20px;
-
 }
+.status p{
+   text-align: left;
+}
+
 dialog {
     display: none;
 
