--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -8,8 +8,6 @@ body {
 .form {
     border-radius: 30px;
     position: fixed;
-    box-sizing: border-box;
-    margin-top: 5%;
     margin-left: 80%;
     background: #0cfad6;
     width: 20%;
@@ -41,11 +39,7 @@ body {
     font-size: 16px;
 }
 
-.form input[type="file"] {
-    margin: 5px 5px 5px 50px;
-}
-
-.form input[type="submit"] {
+.form input[type="submit"],button {
     text-align: center;
     background-color: #333;
     color: #fff;
@@ -53,6 +47,7 @@ body {
     padding: 10px 20px;
     margin: 15px 15px 15px 90px;
     border: none;
+    cursor: pointer
 
 }
 
@@ -153,7 +148,23 @@ body {
 .status p{
    text-align: left;
 }
+.image-preview{
+    width: 300px;
+    min-height: 100px;
+    border: 2px solid #dddddd;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #cccccc;
+
+}
+.image-preview__image{
+    display: none;
+    width: 50%;
+
+}
 dialog {
     display: none;
 
@@ -161,7 +172,7 @@ dialog {
 
 dialog[open="open"] {
     display: block;
-    width: 20em;
+    width: 25em;
     background-color: white;
     border: 4px solid black;
     position: fixed;
@@ -172,5 +183,11 @@ dialog[open="open"] {
     padding: 1em;
     z-index: 1002;
 }
-
-
+.Dialog_button{
+    background-color: #333;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer
+}
