--- a/files/css/CommentDesign.css
+++ b/files/css/CommentDesign.css
@@ -2,15 +2,42 @@
     border-radius: 50px;
     position: fixed;
     padding: 20px 20px;
-    margin-left: 77%;
+    right: 1%;
     background: #0cfad6;
-    width: 20%;
+    text-align: center;
+}
+
+#loading {
+    position: fixed;
+    height: 10px;
+    background-color: #00620b;
+    bottom: 15px;
+    border-radius: 5px;
+    z-index: 1;
+}
+
+#lowbar {
+    position: fixed;
+    height: 20px;
+    background-color: rgb(41, 41, 41);
+    bottom: 10px;
 }
 
 titlebar {
     border-radius: 50px;
     padding: 20px 20px;
     background-color: #0cfad6;
+}
+
+body {
+    background-color: rgb(92, 92, 92);
+    width: 100%;
+    overflow: hidden;
+    line-height: 1;
+}
+
+html {
+    min-height: 100%;
 }
 
 button {
