--- a/files/css/VersionOverview.css
+++ b/files/css/VersionOverview.css
@@ -14,7 +14,17 @@ body {
     width: 100%;
     height: 15%;
 }
-
+.topimg a{
+    background-color:#333;
+    color: #fff;
+    text-decoration:none;
+    font-size: 18px;
+    padding: 12px 12px;
+    margin: 30px 10px 10px 20px;
+    cursor: pointer;
+    border: none;
+    float: right;
+}
 h1 {
     text-align: center;
 }
