--- a/files/css/CommentDesign.css
+++ b/files/css/CommentDesign.css
@@ -1,10 +1,48 @@
-#toolbox {
+.toolbox {
     border-radius: 50px;
     position: fixed;
     padding: 20px 20px;
     right: 1%;
     background: #0cfad6;
     text-align: center;
+}
+
+.button {
+    position: fixed;
+    margin-top: 0.6%;
+    width: 2%;
+}
+
+.textField {
+    min-width: 21px;
+    position: fixed;
+    margin-top: 0.9%;
+    width: 2%;
+    color: white;
+    text-align: center;
+    border: none;
+    border-bottom: 1px solid black;
+    background: transparent;
+    outline: none;
+    font-size: 16px;
+}
+
+.lowerBar {
+    background-color: rgb(18, 18, 18);
+    position: fixed;
+    bottom: 0;
+    height: 9%;
+    width: 100%;
+    left: 0;
+}
+
+.pageNumField {
+    position: absolute;
+    left: 47.8%;
+    width: 4%;
+    text-align: center;
+    color: white;
+    font-size: 18px;
 }
 
 #pdf {
@@ -37,16 +75,25 @@
     z-index: 1;
 }
 
-#lowbar {
+#loadingBar {
     position: fixed;
     height: 20px;
     background-color: rgb(41, 41, 41);
     bottom: 10px;
 }
 
-titlebar {
-    border-radius: 50px;
-    padding: 20px 20px;
+#titleCard {
+    text-align: center;
+    color: black;
+    font-size: 25px;
+}
+
+#titleBar {
+    position: absolute;
+    border-radius: 20px;
+    right: 1%;
+    left: 1%;
+    top: 1%;
     background-color: #0cfad6;
 }
 
