--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -7,7 +7,7 @@ body {
 .form {
     border-radius: 30px;
     position:fixed;
-    margin-top: -10%;
+    margin-top: 1.5%;
     margin-left: 83%;
     background: #0cfad6;
     width: 20%;
@@ -27,13 +27,17 @@ body {
 
 
 .form input[type="text"], input[type="password"], input[type="email"] {
+    font-weight: 700;
     color: black;
     text-align: center;
     width: 85%;
     margin-top: 10px;
     margin-left: 20px;
-    border: none;
-    border-bottom: 1px solid black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-color: black;
+    border-width: 0.1em;
     background: transparent;
     outline: none;
     height: 40px;
@@ -46,14 +50,16 @@ body {
     color: #fff;
     font-size: 20px;
     padding: 10px 20px;
-    margin: 15px 15px 15px 90px;
+    margin-bottom: 2%;
+    margin-top: 4%;
+    margin-left: 30%;
     border: none;
     cursor: pointer
 
 }
 
 .form p {
-    padding-left: 150px;
+    padding-left: 40%;
     color: red;
     text-decoration: underline;
     text-underline: red;
@@ -64,7 +70,6 @@ body {
     top: 0;
     width: 100%;
     z-index: 6;
-    height:14%;
     background-color: rgba(128, 128, 128, 0.2);
 }
 .topDivs a{
@@ -117,6 +122,18 @@ body {
     float: left;
     z-index: 1002;
 }
+.clients button{
+    text-align: center;
+    background-color: #333;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 20px;
+    margin-bottom: 2%;
+    margin-top: 4%;
+    margin-left: 10%;
+    border: none;
+    cursor: pointer
+}
 .status {
     background-color: gray;
     color: white;
@@ -168,6 +185,7 @@ dialog[open="open"] {
     color: #fff;
     font-size: 20px;
     padding: 10px 20px;
+    margin-left: 20%;
     border: none;
     cursor: pointer
 }
