added search suggestions

--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -7,12 +7,16 @@ body {
 .form {
     border-radius: 30px;
     position:fixed;
-    margin-top: 1.5%;
+    margin-top: -10%;
     margin-left: 83%;
     background: #0cfad6;
     width: 20%;
     transform: scale(0.7);
 
+}
+.space {
+    margin-top: 12%;
+    position: relative;
 }
 
 .form h1 {
@@ -266,4 +270,34 @@ dialog[open="open"] {
     0% {
         transform: rotate(360deg);
     }
+}
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /*position the autocomplete items to be the same width as the container:*/
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+    /*when hovering an item:*/
+    background-color: #e9e9e9;
+}
+.autocomplete-active {
+    /*when navigating through the items using the arrow keys:*/
+    background-color: DodgerBlue !important;
+    color: #ffffff;
 }
