--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -8,7 +8,7 @@ body {
     border-radius: 30px;
     position:fixed;
     margin-top: -10%;
-    margin-left: 83%;
+    margin-left: 82.5%;
     background: #0cfad6;
     width: 20%;
     transform: scale(0.7);
@@ -151,9 +151,12 @@ body {
 }
 
 .image-preview{
-    width: 100%;
-    min-height: 100px;
-    border: 2px solid #dddddd;
+    width:98%;
+    min-height: 120px;
+    border-radius: 15px;
+    background-color: white;
+    border: 2px solid #0cfad6;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -281,7 +284,6 @@ dialog[open="open"] {
     border-bottom: none;
     border-top: none;
     z-index: 99;
-    /*position the autocomplete items to be the same width as the container:*/
     top: 100%;
     left: 0;
     right: 0;
@@ -297,7 +299,6 @@ dialog[open="open"] {
     background-color: #e9e9e9;
 }
 .autocomplete-active {
-    /*when navigating through the items using the arrow keys:*/
     background-color: DodgerBlue !important;
     color: #ffffff;
 }
