--- a/files/css/Viewport.css
+++ b/files/css/Viewport.css
@@ -4,6 +4,14 @@
     width: 2%;
 }
 
+.selected{
+	border: solid;
+}
+
+.disSelected{
+	border: solid transparent;
+}
+
 .textField {
     min-width: 21px;
     position: fixed;
@@ -34,6 +42,15 @@
     text-align: center;
     color: white;
     font-size: 18px;
+}
+
+.toolbox {
+    border-radius: 50px;
+    position: fixed;
+    padding: 20px 20px;
+    right: 1%;
+    background: #0cfad6;
+    text-align: center;
 }
 
 #pdf {
