--- a/files/css/Login.css
+++ b/files/css/Login.css
@@ -88,3 +88,11 @@ body {
 .input-container i{
     cursor: pointer;
 }
+/*Da in Firefox die inputs rot um randet werden wird dies so vermiden*/
+input:-moz-placeholder {
+    box-shadow:none !important;
+}
+
+input:invalid {
+    box-shadow:none;
+}
