--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -5,12 +5,15 @@ body {
 
 }
 .form {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     border-radius: 30px;
     position:fixed;
     margin-top: -8%;
-    margin-left: 82%;
+    margin-left: 71%;
     background: #0cfad6;
-    width: 20%;
+    width: 30%;
     transform: scale(0.8);
 
 }
@@ -33,10 +36,10 @@ body {
 .form input[type="text"], input[type="password"], input[type="email"] {
     font-weight: 700;
     color: black;
+    padding: 0;
     text-align: center;
     width: 85%;
     margin-top: 10px;
-    margin-left: 20px;
     border-top: none;
     border-right: none;
     border-left: none;
@@ -48,15 +51,13 @@ body {
     font-size: 16px;
 }
 
-.form input[type="submit"],button {
+.form input[type="submit"],button,input[type="button"] {
     text-align: center;
     background-color: #333;
     color: #fff;
     font-size: 20px;
     padding: 10px 20px;
     margin-bottom: 2%;
-    margin-top: 4%;
-    margin-left: 30%;
     border: none;
     cursor: pointer
 
@@ -154,6 +155,7 @@ body {
     width:98%;
     min-height: 120px;
     border-radius: 15px;
+    margin-bottom: 5px;
     background-color: white;
     border: 2px solid #0cfad6;
     position: relative;
