--- a/libs/templates/emailBearbeitet.html
+++ b/libs/templates/emailBearbeitet.html
@@ -8,7 +8,7 @@
 <body>
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Design Request wurde von uns bearbeitet</span>
 <center>
-    <img alt="tick" height="200" src="http://localhost/design-revision/files/img/logo.png" width="200">
+    <img alt="tick" height="200" src="https://cdn-design-revision.netlify.com/files/img/logo.png" width="200">
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px">Sehr geehrte {name},<br>
         Ihr Design Request {project-name} {project-id} wurde von uns bearbeitet.<br>
