--- a/libs/templates/emailFreigebenAcc.html
+++ b/libs/templates/emailFreigebenAcc.html
@@ -9,8 +9,8 @@
 <center>
 <img alt="tick" height="200" src="https://cdn-design-revision.netlify.com/files/img/logo.png" width="200">
     <h1 style="font-size:48px">Design Revision</h1>
-    <p style="font-size:24px">Sehr geehrte Kunde {name},<br>
-       Sie wurden eingeladen dem Projekt "{project-name}"<br>
+    <p style="font-size:24px">Hallo,<br>
+    {name} hat Sie eingeladen dem Projekt "{project-name}"<br>
         beizutreten.
     </p>
     <a href="{link}" style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none;cursor: pointer">Ansehen</a>
