--- a/libs/templates/emailNeueAenderungen.html
+++ b/libs/templates/emailNeueAenderungen.html
@@ -3,14 +3,13 @@
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Neue Änderungen gespeichert</title>
 </head>
 <body>
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">{name} hat neue &Auml;nderungen gespeichert </span>
 <center>
-    <img alt="tick" height="200px" width="200px" src="https://cdn-design-revision.netlify.com/files/img/logo.png">
+    <img alt="logo" height="200px" width="200px" src="https://cdn-design-revision.netlify.com/files/img/logo.png">
     <h1 style="font-size:48px">Design Revision</h1>
-    <p style="font-size:24px">Der Kunde {name}, hat bei {project-name} {project-id} neue<br>
+    <p style="font-size:24px">Der Kunde {name} hat bei <i>{project-name} {project-version}</i> neue<br>
         &Auml;nderungen gespeichert.<br>
     </p>
     <a href="{link}"
