--- a/libs/templates/printverify.html
+++ b/libs/templates/printverify.html
@@ -9,10 +9,13 @@
 <center>
     <img alt="logo" height="200px" width="200px" src="https://cdn-design-revision.netlify.com/files/img/logo.png">
     <h1 style="font-size:48px">Design Revision</h1>
-    <p style="font-size:24px">Um das Projekt <i>{project-name}</i> endgültig zum Druck freizugeben, klicken Sie bitte auf unten stehenden Link <br>und geben Sie folgende Sicherheitszahlen ein:<br>
-        {project-version}.<br>
+    <p style="font-size:24px">Um das Projekt <i>{project-name}</i> endgültig zum Druck freizugeben, klicken Sie bitte
+        auf unten stehenden Link <br>und geben Sie folgende Sicherheitszahlen ein:<br>
+        <code style="font-size: 30px">{project-version}</code><br>
     </p>
-    <a href="{link}" style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none;cursor: pointer">Zur Best&auml;tigungsseite</a>
+    <a href="{link}"
+       style="background-color: #0cfad6;color: black;font-size: 30px; padding: 15px 30px;margin: 20px;text-decoration:none;cursor: pointer">Zur
+        Best&auml;tigungsseite</a>
 </center>
 </body>
 </html>
