--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -142,6 +142,7 @@ body {
 .status {
     background-color: gray;
     color: white;
+    font-size: 24px;
     position: relative;
     border-radius: 15px;
     margin-left:    50%;
@@ -149,6 +150,7 @@ body {
 }
 .status p {
     text-align: center;
+
 }
 
 .image-preview{
