--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -201,6 +201,8 @@ dialog[open="open"] {
     border: none;
     cursor: pointer
 }
+/*
+Nicht mehr notwendig da anderer Alert verwendet wird
 .sendFeedBack{
     display: none;
     border: 4px solid black;
@@ -214,7 +216,7 @@ dialog[open="open"] {
     height: 20%;
     text-align: center;
 }
-
+*/
 #loader {
     position: relative;
     z-index: 1;
