--- a/files/css/Viewport.css
+++ b/files/css/Viewport.css
@@ -54,7 +54,6 @@
     border-radius: 30px;
     position: fixed;
     padding: 10px 10px;
-    right: 1%;
     background: #0cfad6;
     text-align: center;
 }
@@ -113,6 +112,35 @@
     left: 1%;
     top: 1%;
     background-color: #0cfad6;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    padding-top: 40px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    border: 1px solid black;
+    background: rgb(41, 41, 41);
+    border-radius: 10px;
+
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    height: 30px;
+    width: 8px;
+    border: 1px solid black;
+    background: rgb(111, 111, 111);
+    -webkit-box-shadow: 0 1px 1px rgb(0, 0, 0);
+    background: -webkit-linear-gradient(rgb(200, 200, 200), rgb(150, 150, 150));
+}
+
+::-webkit-scrollbar-track-piece {
+    height: 30px;
+    width: 30px;
 }
 
 body {
