--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -95,7 +95,7 @@ body {
 
 .topDivs input[type="text"] {
     margin-top: 25px;
-  float: right;
+    float: right;
     color: black;
     text-align: center;
     border: none;
@@ -316,4 +316,33 @@ input:-moz-placeholder {
 
 input:invalid {
     box-shadow:none;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    padding-top: 40px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    border: 1px solid black;
+    background: rgb(41, 41, 41);
+    border-radius: 10px;
+
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    height: 30px;
+    width: 8px;
+    border: 1px solid black;
+    background: rgb(111, 111, 111);
+    -webkit-box-shadow: 0 1px 1px rgb(0, 0, 0);
+    background: -webkit-linear-gradient(rgb(200, 200, 200), rgb(150, 150, 150));
+}
+
+::-webkit-scrollbar-track-piece {
+    height: 30px;
+    width: 30px;
 }
