--- a/files/css/VersionOverview.css
+++ b/files/css/VersionOverview.css
@@ -6,7 +6,7 @@ body {
 }
 
 .topimg {
-    margin-top: -12%;
+    margin-top: -15%;
     position: fixed;
     z-index: 6;
     background-color: rgba(128, 128, 128, 0.2);
@@ -65,7 +65,7 @@ h1 {
 
 
 .space {
-    margin-top: 12%;
+    margin-top: 15%;
     position: relative;
 }
 .tnummer {
@@ -93,4 +93,33 @@ h1 {
 .row{
     background-color: rgba(128, 128, 128, 0.2);
     display: table-row;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    padding-top: 40px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    border: 1px solid black;
+    background: rgb(41, 41, 41);
+    border-radius: 10px;
+
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    height: 30px;
+    width: 8px;
+    border: 1px solid black;
+    background: rgb(111, 111, 111);
+    -webkit-box-shadow: 0 1px 1px rgb(0, 0, 0);
+    background: -webkit-linear-gradient(rgb(200, 200, 200), rgb(150, 150, 150));
+}
+
+::-webkit-scrollbar-track-piece {
+    height: 30px;
+    width: 30px;
 }
