--- a/files/css/Viewport.css
+++ b/files/css/Viewport.css
@@ -71,6 +71,16 @@
     width: 500px;
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+}
+
+
 .progress-value {
     box-shadow: 0 10px 40px -10px rgb(20, 100, 20);
     border-radius: 100px;
