--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -346,3 +346,30 @@ input:invalid {
     height: 30px;
     width: 30px;
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+.tooltiptext {
+    visibility: hidden;
+    width: 300px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    position: absolute;
+}
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    right: 100%; /* To the left of the tooltip */
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+}
