changed cdn links from netlify.com to netlify.app

--- a/libs/templates/emailFreigebenNew.html
+++ b/libs/templates/emailFreigebenNew.html
@@ -7,7 +7,7 @@
 <body>
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Einladung zu {project-name}</span>
 <center>
-<img alt="tick" height="200" src="https://cdn-design-revision.netlify.com/files/img/logo.png" width="200">
+<img alt="tick" height="200" src="https://cdn-design-revision.netlify.app/files/img/logo.png" width="200">
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px">Hallo,<br>
        {name} hat Sie eingeladen dem Projekt "{project-name}"<br>
