--- a/libs/templates/emailverify.html
+++ b/libs/templates/emailverify.html
@@ -7,7 +7,7 @@
 <body>
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Wilkommen bei Design Revision</span>
 <center>
-    <img alt="logo" height="200px" width="200px" src="https://cdn-design-revision.netlify.com/files/img/logo.png">
+    <img alt="logo" height="200px" width="200px" src="https://cdn-design-revision.netlify.app/files/img/logo.png">
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px">Wilkommen bei Design Revison {name}<br>Bitte klicken Sie auf den Link um Ihre E-Mail Adresse zu
         best&auml;tigen.<br>
