--- a/libs/templates/printverify.html
+++ b/libs/templates/printverify.html
@@ -7,7 +7,7 @@
 <body>
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Druckfreigabe für {project-name} best&auml;tigen</span>
 <center>
-    <img alt="logo" height="200px" width="200px" src="https://cdn-design-revision.netlify.com/files/img/logo.png">
+    <img alt="logo" height="200px" width="200px" src="https://cdn-design-revision.netlify.app/files/img/logo.png">
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px">Um das Projekt <i>{project-name}</i> endgültig zum Druck freizugeben, klicken Sie bitte
         auf unten stehenden Link <br>und geben Sie folgende Sicherheitszahlen ein:<br>
