--- a/libs/templates/resetPassword.html
+++ b/libs/templates/resetPassword.html
@@ -8,7 +8,7 @@
 <span style="color: transparent; display: none !important; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">Reset Password</span>
 <center>
     <img alt="logo" height="200px" width="200px"
-         src="https://cdn-design-revision.netlify.com/files/img/logo.png">
+         src="https://cdn-design-revision.netlify.app/files/img/logo.png">
     <h1 style="font-size:48px">Design Revision</h1>
     <p style="font-size:24px"><br>
     </p>
