--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -347,10 +347,7 @@ input:invalid {
     width: 30px;
 }
 
-.tooltip {
-    position: relative;
-    display: inline-block;
-}
+
 .tooltiptext {
     visibility: hidden;
     width: 300px;
@@ -363,7 +360,7 @@ input:invalid {
     border-radius: 6px;
     position: absolute;
 }
-.tooltip .tooltiptext::after {
+.tooltiptext::after {
     content: " ";
     position: absolute;
     top: 50%;
