added HTTP 409 Code in Projects Creation Message, added Member via Member-selection will now be temporary saved until you switch between Project creation and Project-editing, and one minor fix

--- a/files/css/CustomerDashboard..css
+++ b/files/css/CustomerDashboard..css
@@ -31,8 +31,10 @@ body {
 .form input:hover {
     color: gray;
 }
-
-
+/*Disable Search and Projects edits until the side has loaded all projects*/
+#searchform,#CustumorDashForm{
+    display: none;
+}
 .form input[type="text"], input[type="password"], input[type="email"] {
     font-weight: 700;
     color: black;
